Added Forgot password service

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,6 +15,7 @@
                 Looks good!
             </div>
         </div>
-        <button class="btn btn-success">Login</button>
-
+        <button class="btn btn-success btn-lg">Login</button>
+        <a href="/forgotpassword" class="mx-auto btn btn-primary btn-sm">forgotpassword</a>
+        
     </form>
