--- a/views/MainPage.ejs
+++ b/views/MainPage.ejs
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="/items">Items</a>
                     <% if(!currentUser) { %>
                     <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
+                    <a class="nav-link" href="/register1">Register</a>
                     <% } else { %>
                     <a class="nav-link" href="/logout">Logout</a>
                     <% } %>
