--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
         <div class="navbar-nav ms-auto">
           <% if(!currentUser) {%>
           <a class="nav-link"  href="/login">LogIn</a>
-          <a class="nav-link"  href="/register">Register</a>
+          <a class="nav-link"  href="/register1">Register</a>
           <% }else {%>
           <a class="nav-link"  href="/logout">LogOut</a>
           <% } %>
