--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,6 +1,6 @@
 <%= layout('./layout/boilerplate') %>
 <h1>Register</h1>
-    <form action="/register" method="post" class="needs-validation" novalidate>
+    <form action="/register1" method="post" class="needs-validation" novalidate>
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             <input type="text" name="username" id="username" class="form-control" required>
@@ -10,18 +10,10 @@
         </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" id="email" class="form-control" required>
+            <input type="email" name="email" id="email" class="form-control mb-2" required>
             <div class="valid-feedback">
                 Looks good!
             </div>
         </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" name="password" id="password" class="form-control" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-        <button class="btn btn-success">Register</button>
-
+        <button class="btn btn-success">Verify Email</button>
     </form>
